--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,19 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.antlr-2.7.7.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.c3p0-0.9.1.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.dom4j-1.6.1.jar-1=/home/rodrigo/mechanics/dist/libs
+file.reference.hibernate-c3p0-4.1.8.Final.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.hibernate-commons-annotations-4.0.1.Final.jar-1=/home/rodrigo/mechanics/dist/libs
+file.reference.hibernate-core-4.1.8.Final.jar-1=/home/rodrigo/mechanics/dist/libs
+file.reference.hibernate-entitymanager-4.1.8.Final.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.javassist-3.15.0-GA.jar-1=/home/rodrigo/mechanics/dist/libs
+file.reference.jboss-logging-3.1.0.GA.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar-1=/home/rodrigo/mechanics/dist/libs
+file.reference.mechanics-test=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
+file.reference.postgresql-9.2-1002.jdbc4.jar-1=/home/rodrigo/mechanics/dist/libs/antlr-2.7.7.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=/home/rodrigo/.netbeans/6.9/build.properties
