--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,39 +26,35 @@ dist.jar=${dist.dir}/mechanics.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.antlr-2.7.7.jar=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/antlr-2.7.7.jar
 file.reference.antlr-2.7.7.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/antlr-2.7.7.jar
-file.reference.c3p0-0.9.1.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/optional/c3p0/c3p0-0.9.1.jar
 file.reference.c3p0-0.9.1.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/optional/c3p0/c3p0-0.9.1.jar
-file.reference.dom4j-1.6.1.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/dom4j-1.6.1.jar
-file.reference.dom4j-1.6.1.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/dom4j-1.6.1.jar
-file.reference.hibernate-c3p0-4.1.8.Final.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/optional/c3p0/hibernate-c3p0-4.1.8.Final.jar
+file.reference.c3p0-0.9.1.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/optional/c3p0/c3p0-0.9.1.jar
+file.reference.dom4j-1.6.1.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/dom4j-1.6.1.jar
 file.reference.hibernate-c3p0-4.1.8.Final.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/optional/c3p0/hibernate-c3p0-4.1.8.Final.jar
-file.reference.hibernate-commons-annotations-4.0.1.Final.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/hibernate-commons-annotations-4.0.1.Final.jar
+file.reference.hibernate-c3p0-4.1.8.Final.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/optional/c3p0/hibernate-c3p0-4.1.8.Final.jar
 file.reference.hibernate-commons-annotations-4.0.1.Final.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/hibernate-commons-annotations-4.0.1.Final.jar
-file.reference.hibernate-core-4.1.8.Final.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/hibernate-core-4.1.8.Final.jar
+file.reference.hibernate-commons-annotations-4.0.1.Final.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/hibernate-commons-annotations-4.0.1.Final.jar
 file.reference.hibernate-core-4.1.8.Final.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/hibernate-core-4.1.8.Final.jar
+file.reference.hibernate-core-4.1.8.Final.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/hibernate-core-4.1.8.Final.jar
 file.reference.hibernate-entitymanager-4.1.8.Final.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/jpa/hibernate-entitymanager-4.1.8.Final.jar
-file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/hibernate-jpa-2.0-api-1.0.1.Final.jar
-file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/hibernate-jpa-2.0-api-1.0.1.Final.jar
-file.reference.hibernate-release-4.1.8.Final.zip=/home/rodrigo/jars/hibernate-release-4.1.8.Final.zip
-file.reference.javassist-3.15.0-GA.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/javassist-3.15.0-GA.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/hibernate-jpa-2.0-api-1.0.1.Final.jar
 file.reference.javassist-3.15.0-GA.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/javassist-3.15.0-GA.jar
-file.reference.jboss-logging-3.1.0.GA.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/jboss-logging-3.1.0.GA.jar
+file.reference.javassist-3.15.0-GA.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/jboss-logging-3.1.0.GA.jar
-file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=/home/rodrigo/jars/hibernate-release-4.1.8.Final/lib/required/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
+file.reference.jboss-logging-3.1.0.GA.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar-1=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
+file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar-2=/home/rodrigo/Downloads/hibernate-release-4.1.8.Final/lib/required/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
 file.reference.mechanics-src=src
 file.reference.mechanics-test=test
-file.reference.postgresql-9.2-1002.jdbc4.jar=/home/rodrigo/jars/postgresql-9.2-1002.jdbc4.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar-1=/home/rodrigo/Downloads/postgresql-9.2-1002.jdbc4.jar
+file.reference.postgresql-9.2-1002.jdbc4.jar-2=/home/rodrigo/Downloads/postgresql-9.2-1002.jdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.dom4j-1.6.1.jar-1}:\
-    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar-1}:\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.hibernate-release-4.1.8.Final.zip}:\
     ${file.reference.javassist-3.15.0-GA.jar}:\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
     ${file.reference.jboss-logging-3.1.0.GA.jar}:\
@@ -66,7 +62,18 @@ javac.classpath=\
     ${file.reference.hibernate-core-4.1.8.Final.jar}:\
     ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
     ${file.reference.c3p0-0.9.1.jar}:\
-    ${file.reference.hibernate-c3p0-4.1.8.Final.jar}
+    ${file.reference.hibernate-c3p0-4.1.8.Final.jar}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.dom4j-1.6.1.jar-2}:\
+    ${file.reference.hibernate-commons-annotations-4.0.1.Final.jar-2}:\
+    ${file.reference.hibernate-core-4.1.8.Final.jar-2}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar-2}:\
+    ${file.reference.javassist-3.15.0-GA.jar-2}:\
+    ${file.reference.jboss-logging-3.1.0.GA.jar-2}:\
+    ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar-2}:\
+    ${file.reference.c3p0-0.9.1.jar-2}:\
+    ${file.reference.hibernate-c3p0-4.1.8.Final.jar-2}:\
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -108,4 +115,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=${file.reference.mechanics-src}
-test.src.dir=${file.reference.mechanics-test}
+test.test.dir=test
